workshops/bank-of-anthos-asm-manifests/deployment-manifests/asm-gateway.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START servicemesh_deployment_manifests_asm_gateway_gateway_bank_of_anthos_gateway]
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bank-of-anthos-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
# [END servicemesh_deployment_manifests_asm_gateway_gateway_bank_of_anthos_gateway]
---
