workshops/bank-of-anthos-asm-manifests/deployment-manifests/accounts-db.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START servicemesh_deployment_manifests_accounts_db_statefulset_accounts_db]
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: accounts-db
  labels:
    app: accounts-db
    tier: db
spec:
  serviceName: "accounts-db"
  replicas: 1
  selector:
    matchLabels:
      app: accounts-db
      tier: db
  template:
    metadata:
      labels:
        app: accounts-db
        tier: db
        version: v0.5.3
    spec:
      serviceAccountName: default
      containers:
      - name: accounts-db
        image: gcr.io/bank-of-anthos-ci/accounts-db:v0.5.3
        ports:
          - containerPort: 5432
            name: postgredb
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: postgresdb
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: postgresdb
        emptyDir: {}
# [END servicemesh_deployment_manifests_accounts_db_statefulset_accounts_db]
---
# [START servicemesh_deployment_manifests_accounts_db_service_accounts_db]
apiVersion: v1
kind: Service
metadata:
  name: accounts-db
  labels:
    app: accounts-db
    tier: db
spec:
  ports:
    - port: 5432
      name: tcp
      targetPort: 5432
      protocol: TCP
  selector:
    app: accounts-db
    tier: db
# [END servicemesh_deployment_manifests_accounts_db_service_accounts_db]
---
# [START servicemesh_deployment_manifests_accounts_db_virtualservice_accounts_db]
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: accounts-db
spec:
  hosts:
  - accounts-db
  tcp:
  - route:
    - destination:
        host: accounts-db
        subset: v0-5-3
# [END servicemesh_deployment_manifests_accounts_db_virtualservice_accounts_db]
---
# [START servicemesh_deployment_manifests_accounts_db_destinationrule_accounts_db_destination]
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: accounts-db-destination
spec:
  host: accounts-db
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-5-3
    labels:
      version: v0.5.3
# [END servicemesh_deployment_manifests_accounts_db_destinationrule_accounts_db_destination]
---
