workshops/bank-of-anthos-asm-manifests/deployment-manifests/userservice.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START servicemesh_deployment_manifests_userservice_deployment_userservice]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
        version: v0.5.3
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: userservice
        image: gcr.io/bank-of-anthos-ci/userservice:v0.5.3
        volumeMounts:
        - name: keys
          mountPath: "/root/.ssh"
          readOnly: true
        ports:
        - name: http-server
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
      volumes:
      - name: keys
        secret:
          secretName: jwt-key
          items:
          - key: jwtRS256.key
            path: privatekey
          - key: jwtRS256.key.pub
            path: publickey
# [END servicemesh_deployment_manifests_userservice_deployment_userservice]
---
# [START servicemesh_deployment_manifests_userservice_service_userservice]
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
  - name: http
    port: 8080
    targetPort: 8080
# [END servicemesh_deployment_manifests_userservice_service_userservice]
---
# [START servicemesh_deployment_manifests_userservice_virtualservice_userservice]
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: userservice
spec:
  hosts:
  - userservice
  http:
  - route:
    - destination:
        host: userservice
        subset: v0-5-3
# [END servicemesh_deployment_manifests_userservice_virtualservice_userservice]
---
# [START servicemesh_deployment_manifests_userservice_destinationrule_userservice_destination]
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: userservice-destination
spec:
  host: userservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v0-5-3
    labels:
      version: v0.5.3
# [END servicemesh_deployment_manifests_userservice_destinationrule_userservice_destination]
---
